# littlePlayer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  cmds.txt  md-styles.css
doc/: introduction.md
include/: EasyWay.h  FrameGrabber.h  MediaProcessor.hpp  ffmpegUtil.h  ffmpegUtil.hpp  pch.h
include/test/: EasyWay.h  FrameGrabber.h
src/: FrameGrabber.cpp  ffmpegUtil.cpp  logger.cpp  main.cpp  playAudio.cpp  playAudioByOpenAL.cpp  playAudioBySDL.cpp  playVideo.cpp  playVideoWithAudio.cpp  player.cpp
test/: ffmpegUtil.cpp  playAudioByOpenAL.cpp  playAudioBySDL.cpp  playVideo.cpp  runTest.cpp
